Make sure layout is up-to-date before rendering the layer tree in DrawingAreaImpl

Fixes <http://webkit.org/b/54646> <rdar://problem/9016889> Assertion failure in
FrameView::paintContents when calling WKPageForceRepaint on a page that uses accelerated
compositing

Reviewed by Anders Carlsson.

* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::forceRepaint): Lay out before we do anything else.

Canonical link: https://commits.webkit.org/68797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78832 268f45cc-cd09-0410-ab3c-d52691b4dbfc